--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta href="styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>About me</title>
 </head>
 <body>
@@ -21,8 +21,9 @@
         <li>When I cook, my tummy doesn't do mediocre. Ever.</li>
     </ul>
     <h2>Follow me</h2>
-    <fieldset>
-        <p></p>
+    <fieldset class="instagram">
+        <h3>All for the gram</h3>
+        <a class="instagram" target="_blank" href="https://www.instagram.com/mickrojo"><p>Personal</p></a><a class="instagram" target="_blank" href="https://www.instagram.com/captured.lifestyle"><p>Photography</p></a>
     </fieldset>
     </section> 
 </body>
