Modified index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
 <body>
     <h1>Hello world!</h1>
     <section>
-    <h2>A little about me...</h2>
-    <p class="description">I'm an uber driver!</p>
-    <p>but thats not it</p>
-    <h2>I have so many different qualities</h2>
-    <h3>And passions</h3>
-    <h4>Things that make me... Me!</h4>
-    <ul>
-        <li>I'm learning to be a web developer!</li>
-        <li>I can also take amazing photos</li>
-        <li>When I cook, my tummy doesn't do mediocre. Ever.</li>
-    </ul>
-    <h2>Follow me</h2>
-    <fieldset class="instagram">
-        <h3>All for the gram</h3>
-        <a class="instagram" target="_blank" href="https://www.instagram.com/mickrojo"><p>Personal</p></a><a class="instagram" target="_blank" href="https://www.instagram.com/captured.lifestyle"><p>Photography</p></a>
-    </fieldset>
+        <h2>About your driver</h2>
+        <p class="description">Hi, I'm glad we have had the oppertunity to cross paths</p>
+        <p>but thats not it</p>
+        <h2>I have so many different qualities</h2>
+        <h3>And passions</h3>
+        <h4>Things that make me... Me!</h4>
+        <article>
+            <ul>
+                <li>I'm learning to be a web developer!</li>
+                <li>I can also take amazing photos</li>
+                <li>When I cook, my tummy doesn't do mediocre. Ever.</li>
+            </ul>
+        </article>
+        <h2>Follow me</h2>
+        <fieldset class="instagram">
+            <ul>
+                <h3>All for the gram</h3>
+                <li><a class="instagram" target="_blank" href="https://www.instagram.com/mickrojo"><p>Personal</p></a></li><li><a class="instagram" target="_blank" href="https://www.instagram.com/captured.lifestyle"><p>Photography</p></a></li>
+            </ul>
+        </fieldset>
     </section> 
 </body>
 </html>
